add price-modal block

--- a/src/templates/prices.jade
+++ b/src/templates/prices.jade
@@ -24,7 +24,7 @@ block content
                             p 1490 за ресайз
                             p 490 за гиф-заглушку
                         .b-prices__price 2990#[span.b-prices__rub ₽]
-                        .text-center: a.b-prices__link(href='#') Посмотреть примеры
+                        .text-center: a.b-prices__link(href='#prices_example_1') Посмотреть примеры
 
                         a.btn.b-prices__button(href='#') Выбрать
                     .b-prices__item.b-prices__item_color_red
@@ -37,7 +37,7 @@ block content
                             p 1490 за ресайз
                             p Гиф-заглушка в #[b подарок]
                         .b-prices__price 4990#[span.b-prices__rub ₽]
-                        .text-center: a.b-prices__link(href='#') Посмотреть примеры
+                        .text-center: a.b-prices__link(href='#prices_example_2') Посмотреть примеры
 
                         a.btn.b-prices__button(href='#') Выбрать
                     .b-prices__item.b-prices__item_wide.b-prices__item_recommended.b-prices__item_color_blue
@@ -52,7 +52,7 @@ block content
                             p Гиф-заглушка в #[b подарок]
                             p #[a(href="#") #[b Бонусов] до 3500]
                         .b-prices__price 9990#[span.b-prices__rub ₽]
-                        .text-center: a.b-prices__link(href='#') Посмотреть примеры
+                        .text-center: a.b-prices__link(href='#prices_example_3') Посмотреть примеры
 
                         a.btn.b-prices__button(href='#') Выбрать
                     .b-prices__item.b-prices__item_color_purple
@@ -81,7 +81,7 @@ block content
                             p От 1 дня на разработку
                             p 490 за ресайз
                         .b-prices__price 990#[span.b-prices__rub ₽]
-                        .text-center: a.b-prices__link(href='#') Посмотреть примеры
+                        .text-center: a.b-prices__link(href='#prices_example_4') Посмотреть примеры
 
                         a.btn.b-prices__button(href='#') Выбрать
                     .b-prices__item.b-prices__item_color_red
@@ -92,7 +92,7 @@ block content
                             p От 2 дней на разработку
                             p 990 за ресайз
                         .b-prices__price 2490#[span.b-prices__rub ₽]
-                        .text-center: a.b-prices__link(href='#') Посмотреть примеры
+                        .text-center: a.b-prices__link(href='#prices_example_5') Посмотреть примеры
 
                         a.btn.b-prices__button(href='#') Выбрать
                     .b-prices__item.b-prices__item_color_blue
@@ -104,7 +104,7 @@ block content
                             p От 3 дней на разработку
                             p 1490 за ресайз
                         .b-prices__price 4990#[span.b-prices__rub ₽]
-                        .text-center: a.b-prices__link(href='#') Посмотреть примеры
+                        .text-center: a.b-prices__link(href='#prices_example_6') Посмотреть примеры
 
                         a.btn.b-prices__button(href='#') Выбрать
                 p.b-prices__header JPG/PNG баннеры
@@ -120,7 +120,7 @@ block content
                             p От 1 дня на разработку
                             p 290 за ресайз
                         .b-prices__price 490#[span.b-prices__rub ₽]
-                        .text-center: a.b-prices__link(href='#') Посмотреть примеры
+                        .text-center: a.b-prices__link(href='#prices_example_7') Посмотреть примеры
 
                         a.btn.b-prices__button(href='#') Выбрать
                     .b-prices__item.b-prices__item_color_red
@@ -131,7 +131,7 @@ block content
                             p От 1 дня на разработку
                             p 690 за ресайз
                         .b-prices__price 1990#[span.b-prices__rub ₽]
-                        .text-center: a.b-prices__link(href='#') Посмотреть примеры
+                        .text-center: a.b-prices__link(href='#prices_example_8') Посмотреть примеры
 
                         a.btn.b-prices__button(href='#') Выбрать
                     .b-prices__item.b-prices__item_color_blue
@@ -142,7 +142,7 @@ block content
                             p От 2 дней на разработку
                             p 990 за ресайз
                         .b-prices__price 2990#[span.b-prices__rub ₽]
-                        .text-center: a.b-prices__link(href='#') Посмотреть примеры
+                        .text-center: a.b-prices__link(href='#prices_example_9') Посмотреть примеры
 
                         a.btn.b-prices__button(href='#') Выбрать
         .container
@@ -231,3 +231,148 @@ block content
                     .form-group
                         input.form-control.b-subscribe__input(name='email', type='email', placeholder='Введите свой email')
                     button.btn.b-subscribe__button(type="submit") Подписаться
+        .hidden
+            #prices_example_1
+                .b-price-modal.b-price-modal_color_green
+                    p.b-price-modal__title Примеры html5 и флеш-баннеров#[br]по тарифу #[span.b-price-modal__name «Эконом»]
+
+                    .b-price-modal__list
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                    .b-price-modal__footer
+                        .b-price-modal__features
+                            p.b-price-modal__feature — Простая анимация;
+                            p.b-price-modal__feature — Нельзя вносить правки;
+                            p.b-price-modal__feature — От 5 дней на разработку;
+                            p.b-price-modal__feature — 1490 #[small ₽] за ресайз
+                            p.b-price-modal__feature — 490 #[small ₽] за гиф-заглушку
+                        .b-price-modal__price 2990#[span.b-price-modal__rub ₽]
+                        a.btn.btn-lg.b-price-modal__button(href='#') Заказать баннер
+            #prices_example_2
+                .b-price-modal.b-price-modal_color_red
+                    p.b-price-modal__title Примеры html5 и флеш-баннеров#[br]по тарифу #[span.b-price-modal__name «Стандарт»]
+
+                    .b-price-modal__list
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                    .b-price-modal__footer
+                        .b-price-modal__features
+                            p.b-price-modal__feature — Простая анимация;
+                            p.b-price-modal__feature — Можно вносить правки;
+                            p.b-price-modal__feature — От 2 дней на разработку;
+                            p.b-price-modal__feature — 1490 #[small ₽] за ресайз
+                            p.b-price-modal__feature — Гиф-заглушка в #[b подарок]
+                        .b-price-modal__price 4990#[span.b-price-modal__rub ₽]
+                        a.btn.btn-lg.b-price-modal__button(href='#') Заказать баннер
+            #prices_example_3
+                .b-price-modal.b-price-modal_color_blue
+                    p.b-price-modal__title Примеры html5 и флеш-баннеров#[br]по тарифу #[span.b-price-modal__name «Премиум»]
+
+                    .b-price-modal__list
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                    .b-price-modal__footer
+                        .b-price-modal__features
+                            p.b-price-modal__feature — Сложная анимация с #[b «вау-эффектом»];
+                            p.b-price-modal__feature — Можно вносить правки;
+                            p.b-price-modal__feature — От 2 дней на разработку;
+                            p.b-price-modal__feature — Можно добавить интерактив;
+                            p.b-price-modal__feature — 1990 #[small ₽] за ресайз
+                            p.b-price-modal__feature — Гиф-заглушка в #[b подарок]
+                        .b-price-modal__price 9990#[span.b-price-modal__rub ₽]
+                        a.btn.btn-lg.b-price-modal__button(href='#') Заказать баннер
+            #prices_example_4
+                .b-price-modal.b-price-modal_color_green
+                    p.b-price-modal__title Примеры гиф-баннеров по тарифу #[span.b-price-modal__name «Мини»]
+
+                    .b-price-modal__list
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                    .b-price-modal__footer
+                        .b-price-modal__features
+                            p.b-price-modal__feature — #[b Простые] кнопки, очень маленькие баннеры, а также несложная анимация;
+                            p.b-price-modal__feature — От 1 дня на разработку;
+                            p.b-price-modal__feature — 490 #[small ₽] за ресайз
+                        .b-price-modal__price 990#[span.b-price-modal__rub ₽]
+                        a.btn.btn-lg.b-price-modal__button(href='#') Заказать баннер
+            #prices_example_5
+                .b-price-modal.b-price-modal_color_red
+                    p.b-price-modal__title Примеры гиф-баннеров#[br]по тарифу #[span.b-price-modal__name «Бизнес»]
+
+                    .b-price-modal__list
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                    .b-price-modal__footer
+                        .b-price-modal__features
+                            p.b-price-modal__feature — #[b Крутые] гиф-баннеры, которые подойдут для рекламы любого проекта,#[br]а также для размещения на любой площадке;
+                            p.b-price-modal__feature — От 2 дней на разработку;
+                            p.b-price-modal__feature — 990 #[small ₽] за ресайз
+                        .b-price-modal__price 2490#[span.b-price-modal__rub ₽]
+                        a.btn.btn-lg.b-price-modal__button(href='#') Заказать баннер
+            #prices_example_6
+                .b-price-modal.b-price-modal_color_blue
+                    p.b-price-modal__title Примеры гиф-баннеров#[br]по тарифу #[span.b-price-modal__name «Анимация+»]
+
+                    .b-price-modal__list
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                    .b-price-modal__footer
+                        .b-price-modal__features
+                            p.b-price-modal__feature — #[b Крутые] гиф-баннеры, плюс плавная анимация каждого кадра.
+                            p.b-price-modal__feature — Не для всех площадок, вес баннера от 500 кб.;
+                            p.b-price-modal__feature — От 3 дней на разработку;
+                            p.b-price-modal__feature — 1490 #[small ₽] за ресайз
+                        .b-price-modal__price 4990#[span.b-price-modal__rub ₽]
+                        a.btn.btn-lg.b-price-modal__button(href='#') Заказать баннер
+            #prices_example_7
+                .b-price-modal.b-price-modal_color_green
+                    p.b-price-modal__title Примеры статичных баннеров#[br]по тарифу #[span.b-price-modal__name «Смолл»]
+
+                    .b-price-modal__list
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                    .b-price-modal__footer
+                        .b-price-modal__features
+                            p.b-price-modal__feature — #[b Простые] кнопки, очень маленькие баннеры;
+                            br
+                            p.b-price-modal__feature — От 1 дня на разработку;
+                            p.b-price-modal__feature — 290 #[small ₽] за ресайз
+                        .b-price-modal__price 490#[span.b-price-modal__rub ₽]
+                        a.btn.btn-lg.b-price-modal__button(href='#') Заказать баннер
+            #prices_example_8
+                .b-price-modal.b-price-modal_color_red
+                    p.b-price-modal__title Примеры статичных баннеров#[br]по тарифу #[span.b-price-modal__name «Мидл»]
+
+                    .b-price-modal__list
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                    .b-price-modal__footer
+                        .b-price-modal__features
+                            p.b-price-modal__feature — #[b Крутые] статичные баннеры всех стандартных размеров,#[br]которые подойдут для рекламы любого проекта, а также для размещения на любой площадке;
+                            p.b-price-modal__feature — От 1 дня на разработку;
+                            p.b-price-modal__feature — 690 #[small ₽] за ресайз
+                        .b-price-modal__price 1990#[span.b-price-modal__rub ₽]
+                        a.btn.btn-lg.b-price-modal__button(href='#') Заказать баннер
+            #prices_example_9
+                .b-price-modal.b-price-modal_color_blue
+                    p.b-price-modal__title Примеры статичных баннеров#[br]по тарифу #[span.b-price-modal__name «Биг»]
+
+                    .b-price-modal__list
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                        .b-price-modal__item: img.b-price-modal__image.img-responsive(src='http://placehold.it/728x90')
+                    .b-price-modal__footer
+                        .b-price-modal__features
+                            p.b-price-modal__feature — #[b Большие] статичные баннеры для рекламы в социальных сетях, слайдеров на сайте,#[br]а также для особых форматов на рекламных площадках;
+                            p.b-price-modal__feature — От 2 дней на разработку;
+                            p.b-price-modal__feature — 990 #[small ₽] за ресайз
+                        .b-price-modal__price 2990#[span.b-price-modal__rub ₽]
+                        a.btn.btn-lg.b-price-modal__button(href='#') Заказать баннер
